# SCherlock

./: .gitignore  .readthedocs.yaml  Basic_usage.ipynb  Hyerarchy.ipynb  Marker_generalization.ipynb  Normal_breast_analysis.ipynb  Normal_lung_atlas_generalization.ipynb  README.md  Uniliver_atlas.ipynb  __init__.py  markers_by_dataset.csv  pyproject.toml  shared_markers.csv  testing.ipynb  testing_multiclass.ipynb
.ipynb_checkpoints/: lara_code-checkpoint.ipynb
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/installation/: index.rst
docs/principle/: index.rst
docs/tutorials/: 1_Basic_usage.ipynb  Normal_breast_analysis.ipynb  index.rst  scsherlock-visualization.ipynb  scsherlock_parameters.ipynb
scSherlock/: __init__.py  sherlock_obj.py  sherlock_obj_multiannotation.py  sherlock_obj_old.py
