[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scSherlock"
version = "0.1.2"
authors = [
  { name="Hugo Croizer" },
]
description = "scSherlock: discovering cell-cell interactions involved in tissue development"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
    "anndata>=0.8.0",
    "scanpy>=1.9.0",
]

[project.urls]
"Homepage" = "https://github.com/HugoCroizer/scSherlock"
"Bug Tracker" = "https://github.com/HugoCroizer/scSherlock/issues"

[tool.setuptools]
packages = ["scSherlock"]